fix rounded issue on mobile screens

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -149,5 +149,5 @@
 }
 
 .contact-input {
-  @apply w-full border-b border-black bg-green placeholder:opacity-0 py-3 px-4 focus:outline-none font-light;
+  @apply w-full border-b border-black bg-green placeholder:opacity-0 py-3 px-4 focus:outline-none font-light rounded-none;
 }
